--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -56,7 +56,7 @@
                 %p{ style: "margin:4px; line-height:18px; font-size: 13px;"} Upload an optional #{file_field_tag("obj")}
               
               %div#answer_preview_container{ style: "padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
-                %div#answer_preview{ style: "text-align: center; padding: 10px;" }
+                %div#answer_preview{ style: "padding: 10px; font-size: 12px; max-height: 250px; overflow-x: hidden; overflow-y: hidden;" }
                   = image_tag "/images/image_thumb.png", style: "width: 125px;", id: "image_placeholder", alt: "Image placeholder"
           - else
             - raise "Fatal: Invalid answer_type"
