profile edits in progress

--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -79,13 +79,13 @@
   .profileheader h5 { display: inline-table; float: right; margin-top:14px; font-size:18px; }
   .profilecontent { padding-bottom:8px;}
   .profilecontent .table { margin-bottom: 0; border: 1px solid rgba(0,0,0,.1); width:auto; box-shadow: 0 2px 4px rgba(0, 0, 0, .05); background-color:white;display: inline-block;float: right; }
-  .profilecontent .table td { text-align:center; border-left: 1px solid rgba(0,0,0,.1); font-size:14px; width:83px; border-top:none; }
+  .profilecontent .table td { text-align:center; border-left: 1px solid rgba(0,0,0,.1); font-size:14px; width:87px; border-top:none; }
   .profilecontent .table p { color: gray; margin:5px 0 0 0;}
   .profilecontent .table h3 { font-size: 45px; }
   .arenabucket { padding: 15px 12px 27px 28px;}
-  .myrank { display:inline-block; text-align: center;position: relative; top: 29px;}
-  .myrank span { font-size:86px; }
-  .myrank p { margin-top:10px; font-weight:bold; font-size:15px; }
+  .myrank { display:inline-block; text-align: center;position: relative; top: 23px;}
+  .myrank span { font-size:79px; }
+  .myrank p { margin-bottom:5px; margin-top:6px; font-weight:bold; font-size:15px; }
   .usercard { padding-top: 6px;border: 1px solid rgba(0,0,0,.1);border-radius: 6px;background-color: whitesmoke;display: inline-block;color: gray;font-size: 12px;min-width: 597px;padding: 2px 10px 10px;}
   .usercard ul { }
   .shareprofile { float:right;border: 1px solid rgba(0,0,0,.1);padding: 5px 8px;background-color: #f9f9f9;border-radius: 5px; }
@@ -138,16 +138,16 @@
         %ul
           %li 
             Challenge name 
-            %span 9,123 points, Level 8
+            %span 9,123 points, Rank: 69
           %li 
             Challenge name 
-            %span 9,123 points, Level 8
+            %span 9,123 points, Rank: 69
           %li
             Challenge name 
-            %span 9,123 points, Level 8
+            %span 9,123 points, Rank: 69
           %li 
             Challenge name 
-            %span 9,123 points, Level 8
+            %span 9,123 points, Rank: 69
       %div.leftbox
         %div.leftboxheader Vital Stats
         %div.leftboxfooter Stuff
@@ -157,8 +157,10 @@
           %h2 What I know...
           %div.profilecontent
             %div.myrank
-              %span 79
-              %p My Rank
+              %span 12
+              %p Level
+              %div.progress.progress-striped.progress-info{ style: "height:10px; width:92px; margin:0;" }
+                %div.bar{ style: "width 50%; width:50px;" }
             %table.table.overview
               %tbody
                 %tr
