Finishing up task prototype.

--- a/app/views/stored_resources/_new_image.html.haml
+++ b/app/views/stored_resources/_new_image.html.haml
@@ -7,7 +7,7 @@
         dataType: 'json',
         done: function (e, data) {
           var result = data.result;
-          var $parent = $(this).parent().parent();
+          var $parent = $(this).parent().parent().parent();
           if(result.status == "success"){
             $(".original_image_preview").remove();
             $parent.find("input.image_input_field").val(result.id);
@@ -25,10 +25,11 @@
       $("##{unique_id}").bind('fileuploadfail', function (e) {alert("File upload failed.")});
     });
   %div.image_input
-    = image_tag "https://s3-us-west-1.amazonaws.com/moonlite/static/image.png", size: "16x16", style: "vertical-align: middle;"
+    = image_tag ICON_CAMERA_URL, size: "16x16", style: "vertical-align: middle;"
     %span{ style: "vertical-align: middle; font-size: 13px;" } Add image:
     = file_field_tag("obj", id: unique_id, style: "margin-left: 2px; line-height: inherit; font-size: 13px; padding-top:0px; height: inherit; vertical-align: middle; width: 200px;")
-    = image_tag "https://s3-us-west-1.amazonaws.com/moonlite/static/loading.gif", size: "20x20", style: "vertical-align: middle; display: none;", id: "loading_image_#{unique_id}", alt: "Loading"
-  %div{ style: "margin-top: 10px;" }
+    = image_tag ICON_LOADING_URL, size: "20x20", style: "vertical-align: middle; display: none;", id: "loading_image_#{unique_id}", alt: "Loading"
     = hidden_field_tag("stored_resource_id", nil, class: "image_input_field")
-    %img.image_preview{ style: "display: none;", alt: "Image preview" }
+  - unless params[:controller] == "sections"
+    %div{ style: "margin-top: 10px;" }
+      %img.image_preview{ style: "display: none;", alt: "Image preview" }
