--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -1,5 +1,7 @@
 %div.quizcontainer{ style: "#{@stored_resource.nil? ? '': 'margin-top: 0px;'}" }
+  
   = render "modals/report_issue"
+  
   = form_for(@task, url: took_section_path(@section, task_id: @task.id), html: { id: "challenge_form", multipart: true }) do |f|
     %div.CRquizspace
       %div.quizheader
@@ -25,52 +27,62 @@
             %p{ style: "vertical-align: bottom;" } To prove you completed this task, you must supply a URL from #{Task::URL_TEMPLATE_NAMES[@task.url_type]} that satisfies the question above.
         
         %div.CRresponsespace{ style: "min-height: 175px;" }           
+          %h4{ style: "margin-bottom: 5px;" } Your answer:
+          %div.error.hide
           - if @task.creative_response?
-            %span Your answer:
             - if @task.text?
-              %textarea{ name: "answer", id: "answer_input", rows: "7", autofocus: "autofocus" }
+              %textarea{ name: "content", id: "answer_input", rows: "7", autofocus: "autofocus" }
             
             - elsif @task.image?
+              
               %div.input{ style: "margin-left: 0px; " }
-                %input#answer_input{ type: "text", name: "answer", style: "width: 250px;", placeholder: "Copy & paste link to image URL here...", autofocus: "autofocus" }
-                %a#answer_preview_button.btn.secondary{style:"position:relative; bottom:5px;"} Preview
-                %p{ style: "margin:4px; line-height:18px; font-size: 13px;"} or #{file_field_tag("obj")}
+                %input#answer_input{ type: "text", name: "url", style: "width: 300px;", placeholder: "Copy & paste link to image URL here...", autofocus: "autofocus" }
+                %a#answer_preview_button.btn.secondary{ style: "margin-left: 10px; position:relative; bottom:5px;" } Preview
+                = render "stored_resources/new_image"
                 %div#answer_preview_container{ style: "padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
-                  %div#answer_preview{ style: "text-align: center; padding: 10px;" }
-                    = image_tag "/images/image_thumb.png", style: "width: 125px;", id: "image_placeholder", alt: "Image placeholder"
+                  %div#answer_preview{ style: "text-align: center;" }
+                    = image_tag "/images/image_thumb.png", class: "image_preview", id: "image_preview", alt: "Image placeholder"
             
             - elsif @task.youtube?
               %div.input{ style: "margin-left: 0px; " }
-                %input#answer_input{ type: "text", name: "answer", style: "width: 250px;", placeholder: "Copy & paste link to youtube video here...", autofocus: "autofocus" }
+                %input#answer_input{ type: "text", name: "url", style: "width: 250px;", placeholder: "Copy & paste link to youtube video here...", autofocus: "autofocus" }
                 %a#answer_preview_button.btn.secondary{ style: "margin-left: 10px; position:relative; bottom:5px;" } Preview
-                %div#answer_preview_container{ style: "text-align: center;padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
+                %div#answer_preview_container{ style: "text-align: center; padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
                   %div#answer_preview
                     = image_tag "/images/youtube_thumb.jpg", size: "380x200", id: "youtube_placeholder", alt: "YouTube placeholder"
           
           - elsif @task.task?
             %div.input{ style: "margin-left: 0px;" }
-              %input#answer_input{ type: "text", name: "answer", style: "width: 300px;", placeholder: "Copy & paste link to proof URL here...", autofocus: "autofocus" }
+              %input#answer_input{ type: "text", name: "url", style: "width: 300px;", placeholder: "Copy & paste link to proof URL here...", autofocus: "autofocus" }
+              %input{ type: "hidden", name: "content"}
+              %input{ type: "hidden", name: "title"}
+              %input{ type: "hidden", name: "description"}
+              %input{ type: "hidden", name: "site_name"}
+              %input{ type: "hidden", name: "image_url"}
               %a#answer_preview_button.btn.secondary{style:"position:relative; bottom:5px;"} Preview
-              
-              - if @task.image_allowed?
-                %p{ style: "margin:4px; line-height:18px; font-size: 13px;"} Upload an optional #{file_field_tag("obj")}
-              
+              = render "stored_resources/new_image" 
               %div#answer_preview_container{ style: "padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
-                %div#answer_preview{ style: "padding: 10px; font-size: 12px; max-height: 250px; overflow-x: hidden; overflow-y: hidden;" }
-                  = image_tag "/images/image_thumb.png", style: "width: 125px;", id: "image_placeholder", alt: "Image placeholder"
-          - else
-            - raise "Fatal: Invalid answer_type"
-            
-          %div{ style: "margin: 10px 0 5px 0;" }
-            %a.add_caption{ onclick: "$('#caption').toggle(); $('.add_caption span.caret').toggle();"} 
-              %span.text Add caption
-            = text_area_tag "caption", nil, style: "height: 40px; width: 96%; display: none; margin: 5px 0;", placeholder: "Caption will appear immediately below your response..."
+                %div#answer_preview{ style: "text-align: center;" }
+                  = image_tag "/images/image_thumb.png", class: "image_preview", id: "image_preview", alt: "Image placeholder"
+                %div#task_preview.hide{ style: "position: relative; font-size: 12px; min-height: 250px; max-height: 300px; overflow-x: hidden; overflow-y: hidden;" }
+                  %div.content{ style: "position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index: 1; font-size: 20px;"}
+                    %pre.unstyled
+                  = image_tag "/images/image_thumb.png", alt: "Image placeholder", class: "preview_image", style:"height: 125px; top: 0px; float: right; z-index: 500;"
+                  %div.details{ style: "padding: 5px 2px; height: 50px; width: 100%; position: absolute; bottom: 0px; left: 0px; z-index: 1000; background-color: black;"}
+                    %h4.title asfasdf
+                    %h5.description aadassdfasdfdf
+          
+          - if @task.caption_allowed?  
+            %div{ style: "margin: 10px 0 5px 0;" }
+              %a.add_caption{ onclick: "$('#caption').toggle(); $('.add_caption span.caret').toggle();"} 
+                %span.text Add caption
+              = text_area_tag "caption", nil, style: "height: 40px; width: 96%; display: none; margin: 5px 0;", placeholder: "Caption will appear immediately below your response..."
       
       %div.CRbuttonspace
         = link_to "Back", challenge_path(@section.path.permalink, completed: true), class: "button button-standard", style: "float: left;"
         %a.arena_report_link{ href:"#", style: "position:relative; top:8px; margin-left:10px; text-decoration:none;"} Report this question
         = f.submit "Submit", class: "button button-actionable", id: "submit_button", style: "float:right;"
-        = image_tag "https://s3-us-west-1.amazonaws.com/moonlite/static/loading.gif", size: "25x25", style: "float: right; display: none; padding: 5px;", id: "loading_image", alt: "Loading"
+        = image_tag ICON_LOADING_URL, size: "25x25", style: "float: right; display: none; padding: 5px;", id: "loading_image", alt: "Loading"
   
   :css
     .container.body { background-color: transparent; border: 0px; box-shadow: none;}
@@ -81,6 +93,8 @@
     .CRresponsespace { width: 50%; }
     .add_caption .text { font-size: 14px; cursor: pointer; vertical-align: top; }
     .add_caption .caret { border-top-color: #0088cc; border-bottom-color: #0088cc; vertical-align: bottom; }
+    #answer_preview .image_preview { height: 200px;  width: inherit; max-width: inherit; }
+    .error { font-size: 13px; color: #971D1C; }
         
   :javascript
     var url_regex = #{@task.task? ? Task::URL_TEMPLATES[@task.url_type].inspect : false};
@@ -117,7 +131,7 @@
         $("#answer_preview_button").click(function(){
           var url = $("#answer_input").val();
           is_valid_image(url, function(valid){
-            if(valid == true) { $("#image_placeholder").attr("src", url);
+            if(valid == true) { $("#image_preview").attr("src", url);
             } else { alert("Please provide a link to a valid image."); }
           });
         });
@@ -130,7 +144,7 @@
         $("#answer_preview_button").click(function(){
           var url = $("#answer_input").val();
           is_valid_image(url, function(valid){
-            if(valid == true) { $("#image_placeholder").attr("src", url);
+            if(valid == true) { $(".image_preview").attr("src", url);
             } else { alert("Please provide a link to a valid image."); }
           });
         });
@@ -157,19 +171,52 @@
       $(function(){
         $("#answer_preview_button").click(function(){
           var url = $("#answer_input").val();
-          if(check_url(url_regex)){
-            console.log("Success");
-            if(url.indexOf("github") >= 0){
-              var raw_url = url.replace("github.com", "raw.github.com");
-              $.get(previewer_url, 
-                { url: raw_url }, 
-                function(data){
-                  $("#answer_preview").html("<pre class='unstyled'>"+data.data+"</pre>");
+          $.ajax(previewer_url, 
+            {
+              data: { url: url },
+              dataType: "json",
+              success: function(results){
+                result = $.parseJSON(results.data);
+                
+                if(result.warnings){
+                  log(result.warnings);
                 }
-              );
+                
+                if(result.error){
+                  log(result.error);
+                  $("div.error").text(result.error).show();
+                } else {
+                  $("#answer_preview").hide();
+                
+                  $("input[name=content]").val(result.content);
+                  $("input[name=content]").val(result.title);
+                  $("input[name=content]").val(result.description);
+                  $("input[name=content]").val(result.site_name);
+                  $("input[name=content]").val(result.image_url);
+                  
+                  var $preview = $("#task_preview");
+                  
+                  if(result.image_url){
+                    $preview.find("img").attr("src", result.image_url);
+                  }  
+                  
+                  if(result.content){
+                    $preview.find(".content pre").text(result.content);
+                  } else {
+                    $preview.find("img").css("height", "100%").css("width", "100%");
+                  }
+                  
+                  if(result.title){
+                    $preview.find(".title").text(result.title);
+                  }
+                  if(result.description){
+                    $preview.find(".description").text(result.description);
+                  }
+                  
+                  $("#task_preview").show();
+                }
+              }
             }
-          } else {
-            alert("Please supply a URL that matches the criteria stated in the question.");
-          }
+          );
         });
       });
