--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -63,13 +63,22 @@
                 %li.CR_dropdown_option
                   = link_to "View all comments", submission_drilldown_path(ct.submitted_answer.id)         
       %div#cr_pop.CRarea
-        - if ct.task.answer_sub_type == Task::TEXT
-          %pre{ style: "margin:20px; word-break:normal;" }= ct.submitted_answer.content
-        - elsif ct.task.answer_sub_type == Task::IMAGE
-          = image_tag(sanitize(ct.submitted_answer.content))
-        - elsif ct.task.answer_sub_type == Task::YOUTUBE
+        - if ct.task.text?
+          %code{ style: "margin:20px; word-break:normal;" }= ct.submitted_answer.content
+        - elsif ct.task.image?
+          = image_tag(sanitize(ct.submitted_answer.preview))
+        - elsif ct.task.youtube?
           %center
-            %div.youtube_answer{ id: "youtube_answer_#{ct.id}", alt: ct.submitted_answer.content }        
+            %div.youtube_answer{ id: "youtube_answer_#{ct.id}", alt: ct.submitted_answer.url }
+        - elsif ct.task.task?
+          - if not ct.submitted_answer.stored_resources.empty?
+            = image_tag(sanitize(ct.submitted_answer.stored_resources.first.obj.url))
+          - elsif not ct.submitted_answer.content.blank?
+            %code.unstyled= ct.submitted_answer.content
+          - else
+            = image_tag(STONY_SMALL_URL)
+        - if ct.submitted_answer.caption
+          %div.caption{ style: "margin: 10px 5px; font-size: 13px; color: #999" }= ct.submitted_answer.caption      
       = render "comments/comments", social_details(ct)
         
 
