--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -71,13 +71,18 @@
           %center
             %div.youtube_answer{ id: "youtube_answer_#{ct.id}", alt: ct.submitted_answer.url }
         - elsif ct.task.task?
-          - if not ct.submitted_answer.stored_resources.empty?
-            = image_tag(sanitize(ct.submitted_answer.stored_resources.first.obj.url))
-          - elsif not ct.submitted_answer.content.blank?
-            %code.unstyled= ct.submitted_answer.content
-          - else
-            = image_tag(STONY_SMALL_URL)
-        - if ct.submitted_answer.caption
+          %div{ style: "position: relative; font-size: 12px; min-height: 250px; max-height: 300px; overflow-x: hidden; overflow-y: hidden;" }
+            %div.content{ style: "position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index: 1; font-size: 20px;"}
+              %pre.unstyled= ct.submitted_answer.content
+            = image_tag (ct.submitted_answer.task_image_url.blank? ? "/images/image_thumb.png" : ct.submitted_answer.task_image_url), alt: "Image placeholder", class: "preview_image", style:"#{ct.submitted_answer.content.blank? ? 'width: 70%;' : 'height: 125px;float: right;'} top: 0px; z-index: 500;"
+            %div.details{ style: "padding: 5px 2px; height: 50px; width: 100%; position: absolute; bottom: 0px; left: 0px; z-index: 1000; background-color: black;"}
+              %h4.title= ct.submitted_answer.title.blank? ? "Completed on #{ct.submitted_answer.created_at}" : ct.submitted_answer.title
+              - if not ct.submitted_answer.caption.blank?
+                %h3.description= ct.submitted_answer.caption
+              - elsif not ct.submitted_answer.description.blank?
+                %h5.description= ct.submitted_answer.description
+            
+        - if not ct.task.task? and ct.submitted_answer.caption
           %div.caption{ style: "margin: 10px 5px; font-size: 13px; color: #999" }= ct.submitted_answer.caption      
       = render "comments/comments", social_details(ct)
         
