--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -126,15 +126,16 @@
         %h3= @current_user_persona.persona.name
       %div.progress.progress-success.progress-striped.profileprog
         %div.bar{ style:"width: #{@current_user_persona.percent_level}%"}
-      %h5 Level #{@current_user_persona.level}
+      %h5 #{@current_user_persona.persona.name} lvl #{@current_user_persona.level}
   %div.row
     %div.span5
       %div.challengeselector
         %ul
           - @enrollments.each do |enrollment|
             %li{ class: ("selected" if enrollment == @enrollments.first), "data-enrollment" => enrollment.id } 
+              = image_tag enrollment.path.picture, style: "width: 16px; height: 16px;"
               = truncate(enrollment.path.name, length: 20)
-              %span #{enrollment.total_points} points, Rank: #{enrollment.rank}
+              %span #{enrollment.total_points} points
               
       %div.leftbox
         %div.leftboxheader Similar People
@@ -149,7 +150,9 @@
       %div.span11.challenge_details{ style: ("display: none;" unless enrollment == @enrollments.first), id: "enrollment_#{enrollment.id}" }
         %div.challengecontent
           %div.arenabucket
-            %h2 What I know...
+            %h2{ style: "margin-left: -13px;"}
+              = image_tag enrollment.path.picture, style: "width: 38px; height: 38px;"
+              What I know...
             %div.profilecontent
               %div.myrank
                 %span= enrollment.level
@@ -171,10 +174,65 @@
                     %td
                       %h3 8
                       %p Comments Received
+
+          %hr
+          %div.crbucket
+            %h2{ style: "margin-left: -13px;"}
+              = image_tag enrollment.path.picture, style: "width: 38px; height: 38px;"
+              What I can do...
+            %h4 #{enrollment.creative_responses.count} Creative Responses
+            %div.profilecontent
+              - enrollment.creative_responses.limit(5).each do |task|
+                .post                      
+                  .postspace
+                    .postheader
+                      %h3
+                        %a.username= @user.name
+                      = link_to path.name, challenge_path(path.permalink), class: "challengename" 
+                      .votingandpointsarea
+                        %span.vote_points{:style => "font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px;"}= task.points_awarded
+                        %span{:style => "font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px; margin-right:5px;"} pts
+                        .dropdown.submission-icon{:style => "padding-top:0px; margin: 0px;"}
+                          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#", :style => "padding:0px;"}
+                            %span.caret{:style => "margin: 6px 0 0 0;"}
+                          %ul.dropdown-menu{:role => "button", :style => "margin: 0; padding: 0; top:26px; left: -71px; min-width: 140px;"}
+                            %li{:style => "margin-left: -10px;"}
+                              .graynub{:style => "top:-17px; left: 75px; margin:0; "}
+                              %div{:style => "padding: 3px 0px; margin:0;"}
+                                %ul.profile_dropdown{:style => "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
+                                  %li
+                                    %a.retract_link{"data-confirm" => "Are you sure you want to delete your submission?", "data-remote" => "true", :href => "/retract/8086", :style => "padding: 0; color: inherit; text-shadow: none; padding-left: 8px; margin-left: -8px; margin-bottom: 2px;"} Delete Submission
+                    .posttext.leveltext.dropdown
+                      %pre.dropdown-toggle{"data-toggle" => "dropdown", :href => "#", :role => "button", :style => "color:inherit; cursor:default;"} Why do you think testing your software may be important?
+                      %ul.dropdown-menu{:role => "menu", :style => "left:99.5%; top:-70%; min-width:152px;"}
+                        %li
+                          %div
+                            .sidenub
+                          %div{:style => "padding: 3px 0px;"}
+                            %ul.profile_dropdown{:style => "list-style: none; margin: 0 2px 0 4px;"}
+                              %li.CR_dropdown_option{:style => "display:none;"}
+                                %a{:href => "/sections/97/take/494"} Answer this question
+                              %li.CR_dropdown_option
+                                %a{:href => "/tasks/494/view"} View all responses
+                              %li.CR_dropdown_option
+                                %a{:href => "/submissions/683/view"} View all comments
+                    #cr_pop.CRarea
+                      - if task.task.text?
+                        %code{ style: "margin:20px; word-break:normal;" }= task.submitted_answer.content
+                      - elsif task.task.image?
+                        = image_tag(sanitize(task.submitted_answer.preview))
+                      - elsif task.task.youtube?
+                        %center
+                          %div.youtube_answer{ id: "youtube_answer_#{task.id}", alt: task.submitted_answer.url }
+                    = render "comments/comments", social_details(task)                        
+              %center
+                %a See more
           %hr
           %div.taskbucket
             - tasks = enrollment.tasks
-            %h2 What I've done...
+            %h2{ style: "margin-left: -13px;"}
+              = image_tag enrollment.path.picture, style: "width: 38px; height: 38px;"
+              What I have done...
             %h4 #{tasks.size} Tasks Completed
             %div.profilecontent
               - tasks.each do |task|
@@ -225,8 +283,3 @@
                     = render "comments/comments", social_details(task)                        
               %center
                 %a See more
-          %hr
-          %div.crbucket
-            %h2 What I can do...
-            %h4 18 Creative Responses
-            %div.profilecontent
