--- a/app/views/modals/_launchpad.html.haml
+++ b/app/views/modals/_launchpad.html.haml
@@ -20,7 +20,7 @@
           - new_rank = @achievements[1]
           %div#launchpad_headlines{ style: "width: 73.9%; height: 90%; margin-right:auto; margin-left:auto;" }
             %div{ style: "box-shadow: 0 6px 14px rgba(0, 0, 0, .1); padding: 0 0 8px 10px; border-radius: 6px; background-color:white; border: 1px solid rgba(0,0,0,.1); margin-top:55px;"}
-              = image_tag STONY_SMALL_URL, style: "display: inline-block; vertical-align: middle", alt: "Stoney"
+              = image_tag STONEY_SMALL_URL, style: "display: inline-block; vertical-align: middle", alt: "Stoney"
               %div{ style: "display:inline-block; top:30px; position:relative; "}
                 %span{ style:"font-size: 64px;" } Congratulations!              
                 %h3{ style: "font-size: 25px; line-height: 32px; position: relative; top: 9px;" }
