--- a/app/views/paths/new.html.haml
+++ b/app/views/paths/new.html.haml
@@ -1,6 +1,6 @@
 %div.single_pane{ style: "padding: 8px; "}
   %div{ style: "width: 100%; border-bottom: 1px solid #DDD;" }
-    = image_tag STONY_SMALL_URL, style: "height: 115px; display: inline; vertical-align: middle", alt: "Stoney"
+    = image_tag STONEY_SMALL_URL, style: "height: 115px; display: inline; vertical-align: middle", alt: "Stoney"
     %h1{ style: "display: inline; vertical-align: middle; font-size:50px;" } Create a Challenge
     
   %div{ style: "width: 86%; text-align: center; margin: 20px auto 0 auto; padding: 0 7% 0 7%;" }
